# zephyr_bt_peripheral

./: CMakeLists.txt  prj.conf
src/: main.c
src/bluetooth/: CMakeLists.txt  gap_peripheral.c  gap_peripheral.h
src/bluetooth/services/: custom_service.c  custom_service.h
